--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: ruby
 bundler_args: --without benchmark:site:development
-script: script/cibuild
 cache: bundler
 language: ruby
 rvm:
  - 2.3.0
+
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+sudo: false # route your build to the container-based infrastructure for a faster build
 
 branches:
   only:
