--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: bundler
 language: ruby
 rvm:
  - 2.3.0
-script: bundle exec rake site:deploy --quiet
+script: bundle exec rake site:build 
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
